--- a/Test02/Views/LoginUser/Login.cshtml
+++ b/Test02/Views/LoginUser/Login.cshtml
@@ -29,47 +29,50 @@
 <body>
     <div class="limiter">
         <div class="container-login100">
-            <div class="wrap-login100">
-                <div class="login100-pic js-tilt" data-tilt>
+            <div class="wrap-login100 row">
+                <div class="login100-pic js-tilt col-lg-6" data-tilt>
                     <img src="~/Content/images/backgroungteam.png" alt="IMG">
                 </div>
                 <!--=====TIÊU ĐỀ======-->
-                @using (Html.BeginForm("Login", "LoginUser", FormMethod.Post))
-                {
+                <div class="col-lg-6">
+                    @using (Html.BeginForm("Login", "LoginUser", FormMethod.Post))
+                    {
 
-                    <span class="login100-form-title">
-                        <b>ĐĂNG NHẬP HỆ THỐNG POS</b>
-                    </span>
-                    <!--=====FORM INPUT TÀI KHOẢN VÀ PASSWORD======-->
-                    <div class="wrap-input100 validate-input">
-                        <input class="input100" type="text" placeholder="Tài khoản quản trị" name="UserName"
-                               id="UserName">
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class='bx bx-user'></i>
+                        <span class="login100-form-title">
+                            <b>ĐĂNG NHẬP HỆ THỐNG POS</b>
                         </span>
-                    </div>
-                    <div class="wrap-input100 validate-input">
-                        <input autocomplete="off" class="input100" type="password" placeholder="Mật khẩu"
-                               name="Password" id="Password">
-                        <span toggle="#password-field" id="spanElement" class="bx fa-fw bx-hide field-icon click-eye" ></span>
-                        <span class="focus-input100"></span>
-                        <span class="symbol-input100">
-                            <i class='bx bx-key'></i>
-                        </span>
-                    </div>
-                    <p class="text-danger">@TempData["error"]</p>
-                    <!--=====ĐĂNG NHẬP======-->
-                    <div class="container-login100-form-btn">
-                        <input type="submit" value="Đăng nhập" />
-                    </div>
-                    <!--=====LINK TÌM MẬT KHẨU======-->
-                    <div class="text-right p-t-12">
-                        <a class="txt2" href="~/LoginUser/QuenMK">
-                            Bạn quên mật khẩu?
-                        </a>
-                    </div>
-                }
+                        <!--=====FORM INPUT TÀI KHOẢN VÀ PASSWORD======-->
+                        <div class="wrap-input100 validate-input">
+                            <input class="input100" type="text" placeholder="Tài khoản quản trị" name="UserName"
+                                   id="UserName">
+                            <span class="focus-input100"></span>
+                            <span class="symbol-input100">
+                                <i class='bx bx-user'></i>
+                            </span>
+                        </div>
+                        <div class="wrap-input100 validate-input">
+                            <input autocomplete="off" class="input100" type="password" placeholder="Mật khẩu"
+                                   name="Password" id="Password">
+                            <span toggle="#password-field" id="spanElement" class="bx fa-fw bx-hide field-icon click-eye"></span>
+                            <span class="focus-input100"></span>
+                            <span class="symbol-input100">
+                                <i class='bx bx-key'></i>
+                            </span>
+                        </div>
+                        <p class="text-danger">@TempData["error"]</p>
+                        <!--=====ĐĂNG NHẬP======-->
+                        <div class="container-login100-form-btn">
+                            <input type="submit" value="Đăng nhập" />
+                        </div>
+                        <!--=====LINK TÌM MẬT KHẨU======-->
+                        <div class="text-right p-t-12">
+                            <a class="txt2" href="~/LoginUser/QuenMK">
+                                Bạn quên mật khẩu?
+                            </a>
+                        </div>
+                    }
+                </div>
+               
                 <!--=====FOOTER======-->
                 <div class="text-center p-t-70 txt2">
                     Phần mềm quản lý đại lý <i class="far fa-copyright" aria-hidden="true"></i>
