--- a/Test02/Views/KinhDoanh/ThemDL.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDL.cshtml
@@ -41,7 +41,7 @@
                     <div class="form-group col-md-2">
                         <label class="control-label" for="MaLoaiDL">Mã loại đại lý</label>
                         <select class="form-control" id="MaLoaiDL" name="MaLoaiDL" required>
-                            <option selected="selected" disabled>--Chọn-----</option>
+                            <option selected="selected" disabled>------Chọn-------</option>
                             <option value="LDL01">Đại lý lớn </option>
                             <option value="LDL02">Đại lý vừa</option>
                             <option value="LDL03">Đại lý nhỏ</option>
@@ -50,19 +50,20 @@
                     </div>
                     <!--Cho thông tin tài khoảng UserName và Password tự động sinh ra và gửi Email-->
                     @*<div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                    </div>*@
+                            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group col-md-4">
+                            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                        </div>*@
                     <div class="form-group  col-md-4">
                         <label class="control-label" for="MaLoaiDL">Tên đại lý</label>
-                        @Html.EditorFor(model => model.TenDL, new { htmlAttributes = new { @class = "form-control", type = "text", required = "true" } })
+                        <input class="form-control text-box single-line" id="TenDL" name="TenDL" required="true" type="text" value="">
                         @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
+                        <div id="mess"></div>
                     </div>
                     <div class="form-group col-md-4">
                         <label class="control-label" for="MaLoaiDL">Số điện thoại</label>
@@ -76,7 +77,7 @@
                     </div>
                     <div class="form-group col-md-4">
                         <label class="control-label" for="MaLoaiDL">Email</label>
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control",type="email", required="true" } })
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", type = "email", required = "true" } })
                         @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group col-md-10">
@@ -127,8 +128,10 @@
                             <BR>
                         </div>
                     </div>
+
                 </div>
             </form>
         </div>
     </div>
 </div>
+
