--- a/Test02/Views/PhongKho/ChiTietDonHang.cshtml
+++ b/Test02/Views/PhongKho/ChiTietDonHang.cshtml
@@ -20,7 +20,7 @@
             });
         </script>
     }
-    
+
 }
 <div class="row">
     <div class="col-md-12">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12 table-responsive">
                         <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                             @*//Phần render từng dòng trong C#*@
                             <thead>
@@ -102,10 +102,24 @@
 
                         <div class="row justify-content-between" style="margin:8px;">
                             <a class="btn btn-outline-dark m-10" href="~/PhongKho/DSDonHang">Trở lại</a>
-                            <a class="btn btn-danger btn-sm" href="/PhongKho/CreatePXuat/@TempData["madh"]" title="Thêm phiếu xuất kho">
-                                <i class="fas fa-plus"></i>
-                                Tạo phiếu xuất
-                            </a>
+                            @{
+                                var dhang = db.DonHangs.Where(s => s.MaDH == madh).FirstOrDefault();
+                                if (dhang.XuatHoaDon == false || dhang.XuatHoaDon == null)
+                                {
+                                    <span class="btn btn-danger btn-sm" style="cursor:no-drop;">
+                                        <i class="fas fa-plus"></i>
+                                        Tạo phiếu xuất
+                                    </span>
+                                }
+                                else
+                                {
+                                    <a class="btn btn-danger btn-sm" href="/PhongKho/CreatePXuat/@TempData["madh"]" title="Thêm phiếu xuất kho">
+                                        <i class="fas fa-plus"></i>
+                                        Tạo phiếu xuất
+                                    </a>
+                                }
+                            }
+
                         </div>
                     </div>
                 </div>
@@ -114,4 +128,135 @@
     </div>
 </div>
 
+
+@* Hóa đơn *@
+
+<link href="~/Content/KeToan/StyleKeToan.css" rel="stylesheet" />
+
+<div class="container-sm">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="tile" id="printMe">
+
+                @{
+
+                    var hddonhang = db.DonHangs.Where(s => s.MaDH == madh).FirstOrDefault();
+                    DateTime ngay = (DateTime)(hddonhang.NgayLap);
+                    int thang = ngay.Month;
+
+                    var daily = db.DaiLies.Where(s => s.MaDL == hddonhang.MaDL).FirstOrDefault();
+                    var loaidaily = db.LoaiDLs.Where(s => s.MaLoaiDL == daily.MaLoaiDL).FirstOrDefault();
+
+
+                    if (hddonhang.XuatHoaDon == false || hddonhang.XuatHoaDon == null)
+                    {
+
+
+                        <h4>Chưa có hóa đơn cho đơn hàng này!</h4>
+                    }
+                    else
+                    {
+                        <div style="padding:20px">
+                            <div style="text-align:center">
+                                <h4>HÓA ĐƠN ĐƠN HÀNG</h4>
+                                <p> <strong>Ngày: </strong>@Html.DisplayFor(model => ngay)</p>
+                                <p> <strong>Mã đơn hàng: </strong>@Html.DisplayFor(model => hddonhang.MaDH)</p>
+                            </div>
+
+
+                            <p> <strong>Tên đại lý: </strong>@Html.DisplayFor(model => daily.TenDL)</p>
+                            <p> <strong>Loại đại lý: </strong>@Html.DisplayFor(model => loaidaily.MaLoaiDL)</p>
+                            <p> <strong>Địa chỉ: </strong>@Html.DisplayFor(model => hddonhang.DiemGiao)</p>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                                        @*//Phần render từng dòng trong C#*@
+                                        <thead>
+                                            <tr role="row" style="text-align:center">
+                                                <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã CTDH</th>
+                                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Mã SP</th>
+                                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Tên sản phẩm</th>
+                                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Số lượng</th>
+                                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 120px;">Thành tiền</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @{ var total1 = 0;
+                                            }
+                                            @foreach (var item in Model)
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.MaCTDH)
+                                                    </td>
+
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.MaSP)
+                                                    </td>
+                                                    @{
+                                                        var sanpham = db.SanPhams.Where(sp => sp.MaSP == item.MaSP).FirstOrDefault();
+                                                    }
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => sanpham.TenSP)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.SoLuong)
+                                                    </td>
+
+
+                                                    <td>
+                                                        @{ total1 += Convert.ToInt32(item.ThanhTien);}
+                                                        @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.ThanhTien);}
+                                                        @Html.DisplayFor(modelItem => ThanhTien)
+
+                                                    </td>
+
+                                                </tr>
+
+                                            }
+                                            <tr>
+                                                <th colspan="4">Tổng cộng tiền nợ:</th>
+                                                @{ var TongCong1 = string.Format("{0:0,0 vnđ}", total1);}
+                                                <td>@Html.DisplayFor(modelItem => TongCong1)</td>
+                                            </tr>
+                                    </table>
+
+                                </div>
+
+                                <h5 style="margin-left:82%;padding-top:20px;" id="sample1">Kế toán</h5>
+                                <h6 style="margin-left:80%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
+                                <br />
+                                <br />
+                                <br />
+                                <p style="margin-left:80%;">Nguyễn Thị Diễm Quỳnh</p>
+                            </div>
+                        </div>
+                    }
+                }
+
+
+            </div>
+        </div>
+    </div>
+    
+</div>
+
+
+<script>
+    function printDiv(divName) {
+
+
+        var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.getElementById("btnin").style.display = "none";
+
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+    }
+</script>
 
