--- a/Test02/Views/PhongKho/DSDonHang.cshtml
+++ b/Test02/Views/PhongKho/DSDonHang.cshtml
@@ -13,9 +13,9 @@
     {
         <script>
             swal({
-                title: "Kho không đủ",
+                title: "Không tìm thấy kho!",
                 text: "Không có kho nào đáp ứng đủ cho đơn hàng @Session["madhxk"]!",
-                icon: "success",
+                icon: "warning",
                 button: "OK",
             });
         </script>
@@ -26,7 +26,7 @@
     <div class="col-lg-12">
         <div class="tile">
             <h3 class="tile-title" style="text-align:center;"><b>DANH SÁCH ĐƠN HÀNG ĐÃ XÉT DUYỆT</b></h3>
-            <div class="tile-body table-responsive">
+            <div class="col-md-12 table-responsive">
                 <table class="table table-hover table-striped table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
                        id="sampleTable">
                     <thead>
@@ -44,10 +44,10 @@
                                 Ngày lập
                             </th>
                             <th>
-                                Đã có hóa đơn
+                                Hóa đơn
                             </th>
                             <th>
-                                Đã tạo phiếu
+                                Phiếu xuất kho
                             </th>
                             <th>
                                 Điểm giao
