--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -6,11 +6,23 @@
     ViewBag.hh = "active";
     ViewBag.Name = "Quản lý hàng hóa";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
-    var dssp = db.SanPhams.ToList();
-    var dsctk = db.ChiTietKhoes.ToList();
     List<string> listSHH = new List<string>();
     List<string> listHH = new List<string>();
     int soluong = 0;
+    //set tổng tồn từng sp theo từng chi tiết kho
+    var chiTietKhos = db.ChiTietKhoes.ToList();
+    var sanPhams = db.SanPhams.ToList();
+    //foreach (var sp in sanPhams)
+    //{
+    //    sp.TongTon = 0;
+    //    foreach (var ctk in chiTietKhos)
+    //    {
+    //        if (sp.MaSP == ctk.MaSP)
+    //        {
+    //            sp.TongTon += ctk.SoLuong;
+    //        }
+    //    }
+    //}
 }
 @{
     var checkMessage = TempData["AlertMessage"];
@@ -71,7 +83,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var item in dssp)
+                                        @foreach (var item in sanPhams)
                                         {
                                         <tr>
                                             <td>
@@ -123,9 +135,9 @@
                                 </div>
                             </div>
                             <h3 class="tile-title" style="text-align:center">DANH SÁCH SẢN PHẨM SẮP HẾT HÀNG / HẾT HÀNG</h3>
-                            <div class="table-responsive">
+                            <div class="col-md-12 table-responsive">
                                 <table class="table table-hover table-striped table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-                                       id="sampleTable">
+                                       id="sampleTable1">
                                     <thead>
                                         <tr>
                                             <th>Mã Kho</th>
@@ -139,7 +151,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var item in dsctk)
+                                        @foreach (var item in chiTietKhos)
                                         {
                                             if (item.TinhTrang == "Sắp hết hàng" || item.TinhTrang == "Hết hàng")
                                             {
@@ -205,7 +217,7 @@
                         </div>
                         <div class="tile-body table-responsive">
                             <table class="table table-hover table-striped table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-                                       id="sampleTable">
+                                       id="sampleTable2">
                                 <thead>
                                     <tr>
                                         <th>Mã Kho</th>
@@ -218,7 +230,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var item in dsctk)
+                                    @foreach (var item in chiTietKhos)
                                     {
                                         if (item.TinhTrang == "Tồn kho")
                                         {
@@ -336,6 +348,6 @@
     }
 </script>
 @* Bootstrap cho navs *@
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+@*<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>*@
